--- a/index.html
+++ b/index.html
@@ -26,18 +26,12 @@
       <div class="row" id="home">
         <div style="display: flex;padding-top: 50px;">
           <div class="box">
-            <h1>Full Stack Developer</h1>
+            <h1>Student at GRIET</h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
-              neque est nihil ipsum error. Deserunt voluptas explicabo ea eum
-              quasi. Rem nisi molestias quia nesciunt incidunt numquam fugiat
-              perferendis assumenda?
+                Hi, I'm Meghana, a motivated student pursuing B.Tech in Computer Science and business systems at Gokaraju Rangaraju Institute of Engineering and Technology (GRIET). My passion lies in Full Stack Development, where I enjoy designing and building interactive, user-friendly applications that solve real-world problems.
             </p>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
-              neque est nihil ipsum error. Deserunt voluptas explicabo ea eum
-              quasi. Rem nisi molestias quia nesciunt incidunt numquam fugiat
-              perferendis assumenda?
+                I believe in the power of continuous learning and staying updated with the latest technologies in the field of web and software development. My journey as a developer has involved exploring both the front-end and back-end aspects of web applications, giving me a well-rounded understanding of how modern applications are built and deployed.
             </p>
             <button>Button 1</button>
             <button>Button 1</button>
@@ -125,7 +119,7 @@
           cupiditate vel dolor.
         </h3>
         <h2>Skills</h2>
-        <h3>Java, Python, Reactjs</h3>
+        <h3>C, Python,Java</h3>
         <p>Display the logo of all the technologies you know.</p>
       </div>
       <div
