--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
           <div class="box">
             <h1>Student at GRIET</h1>
             <p>
-                Hi, I'm Meghana, a motivated student pursuing B.Tech in Computer Science and business systems at Gokaraju Rangaraju Institute of Engineering and Technology (GRIET). My passion lies in Full Stack Development, where I enjoy designing and building interactive, user-friendly applications that solve real-world problems.
+                Hi, I'm Meghana, an enthusiastic student pursuing B.Tech in Computer Science and business systems at Gokaraju Rangaraju Institute of Engineering and Technology (GRIET). My passion lies in Full Stack Development, where I enjoy designing and building interactive, user-friendly applications that solve real-world problems.
             </p>
             <p>
                 I believe in the power of continuous learning and staying updated with the latest technologies in the field of web and software development. My journey as a developer has involved exploring both the front-end and back-end aspects of web applications, giving me a well-rounded understanding of how modern applications are built and deployed.
             </p>
-            <button>Button 1</button>
-            <button>Button 1</button>
+            <a href="assets/resume/KammamMeghana.pdf"><button > Resume</button></a>
+            
           </div>
           <div class="box">
             <img src="https://picsum.photos/id/2/400/400" />
@@ -46,7 +46,7 @@
         <h1>Projects</h1>
         <div style="display: flex">
           <div class="box">
-            <h3>Project 1</h3>
+            <a href="https://kammammeghana.github.io/onlinestore/">Project-1</a>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
               quia nobis eligendi reiciendis. Esse a possimus eum est veritatis
@@ -56,7 +56,8 @@
           </div>
 
           <div class="box">
-            <h3>Project 2</h3>
+            <a href="https://kammammeghana.github.io/js-bank/">Project-2</a>
+            
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
               quia nobis eligendi reiciendis. Esse a possimus eum est veritatis
@@ -66,7 +67,8 @@
           </div>
 
           <div class="box">
-            <h3>Project 3</h3>
+            <a href="https://kammammeghana.github.io/MyStore/">Project-3</a>
+
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
               quia nobis eligendi reiciendis. Esse a possimus eum est veritatis
